--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,7 @@
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set -g prefix C-SPACE
+set -g base-index 1
+set -g renumber-windows on
+set -g mode-keys vi
 
 bind | split-window -h
 bind - split-window -v
@@ -11,16 +12,6 @@ set -g mouse on
 
 # DESIGN TWEAKS
 
-# don't do anything when a 'bell' rings
-set -g visual-activity off
-set -g visual-bell off
-set -g visual-silence off
-setw -g monitor-activity off
-set -g bell-action none
-
-# clock mode
-setw -g clock-mode-colour yellow
-
 # copy mode
 setw -g mode-style 'fg=black bg=red bold'
 
@@ -28,22 +19,12 @@ setw -g mode-style 'fg=black bg=red bold'
 set -g pane-border-style 'fg=red'
 set -g pane-active-border-style 'fg=yellow'
 
+# windows
+set -g window-status-current-style "fg=blue bg=default bold"
+
 # statusbar
-set -g status-position bottom
-set -g status-justify left
-set -g status-style 'fg=red'
-
-set -g status-left ''
-set -g status-left-length 10
-
-set -g status-right-style 'fg=black bg=yellow'
-set -g status-right '%Y-%m-%d %H:%M '
-set -g status-right-length 50
-
-setw -g window-status-current-style 'fg=black bg=red'
-setw -g window-status-current-format ' #I #W #F '
-
-setw -g window-status-style 'fg=red bg=black'
-setw -g window-status-format ' #I #[fg=white]#W #[fg=yellow]#F '
-
-setw -g window-status-bell-style 'fg=yellow bg=red bold'
+set -g status-position top
+set -g status-justify absolute-centre
+set -g status-style "bg=default"
+set -g status-left "#S"
+set -g status-right ""
