--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,11 +3,6 @@ set -g base-index 1
 set -g renumber-windows on
 set -g mode-keys vi
 
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
-
 set -g mouse on
 
 # DESIGN TWEAKS
@@ -28,3 +23,15 @@ set -g status-justify absolute-centre
 set -g status-style "bg=default"
 set -g status-left "#S"
 set -g status-right ""
+
+# BINDS
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+bind r source-file "~/.config/tmux/tmux.conf"
+bind f run-shell "tmux neww ~/.config/scripts/tmux-session-dispensary.sh"
+bind H run-shell "~/.config/scripts/tmux-session-dispensary.sh ~"
+bind P run-shell "~/.config/scripts/tmux-session-dispensary.sh ~/projects"
+bind D run-shell "~/.config/scripts/tmux-session-dispensary.sh ~/Documents"
